Add base code for the application Fix Imports Fix pip installs

--- a/Pipfile
+++ b/Pipfile
@@ -14,8 +14,12 @@ Markdown = "*"
 gunicorn = "*"
 django-environ = "*"
 pre-commit = "*"
+psycopg2 = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.9"
+
+[pipenv]
+allow_prereleases = true
