--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SECRET_KEY=vn67yyk@subwz$29q8lv)3z9yi8fjs4t4fi_r+=k=)8@3jus87
-REACT_APP_BACKEND_ENDPOINT='http://develop-alb-1202626836.us-east-1.elb.amazonaws.com'
+REACT_APP_BACKEND_ENDPOINT='localhost:3000'
 DEBUG=True
