--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,45 @@
 version: '3.7'
 
 services:
-  web:
+  django-app-dev:
     build:
-      context: ./app
-      dockerfile: Dockerfile.prod
-    command: gunicorn hello_django.wsgi:application --bind 0.0.0.0:8000
+      context: .
+      dockerfile: docker/server/dev.Dockerfile
+    ports:
+      - 8000:8000
+    environment:
+      - IN_DOCKER=True
     volumes:
-      - static_volume:/home/app/web/staticfiles
-      - media_volume:/home/app/web/mediafiles
-    expose:
-      - 8000
-    env_file:
-      - ./.env.prod
-    depends_on:
+      - static_volume:/usr/src/app/backend/staticfiles
+    depends_on: 
       - db
   db:
     image: postgres:12.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - ./.env.prod.db
-  nginx:
-    build: ./nginx
-    volumes:
-      - static_volume:/home/app/web/staticfiles
-      - media_volume:/home/app/web/mediafiles
+    environment:
+      - POSTGRES_USER=fampay
+      - POSTGRES_PASSWORD=fampay
+      - POSTGRES_DB=fampay
+  frontend-dev:
+    build:
+      context: .
+      dockerfile: ./docker/client/dev.Dockerfile
     ports:
-      - 1337:80
-    depends_on:
-      - web
+      - 3000:3000
+    stdin_open: true
+  nginx:
+    build:
+      context: .
+      dockerfile: ./docker/nginx/dev.Dockerfile
+    ports: 
+      - 8081:80
+    volumes:
+      - static_volume:/usr/src/app/backend/staticfiles
+    depends_on: 
+      - django-app-dev
+      - frontend-dev
 
 volumes:
-  postgres_data:
   static_volume:
-  media_volume:
+  postgres_data:
