Fix nginx, docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,16 +11,24 @@ services:
       - IN_DOCKER=True
     volumes:
       - static_volume:/usr/src/app/backend/staticfiles
-    depends_on: 
-      - db
-  db:
-    image: postgres:12.0-alpine
+  frontend-dev:
+    build:
+      context: .
+      dockerfile: ./docker/client/dev.Dockerfile
+    ports:
+      - 3000:3000
+    stdin_open: true
+  nginx:
+    build:
+      context: .
+      dockerfile: ./docker/nginx/dev.Dockerfile
+    ports: 
+      - 8081:80
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=fampay
-      - POSTGRES_PASSWORD=fampay
-      - POSTGRES_DB=fampay
+      - static_volume:/usr/src/app/backend/staticfiles
+    depends_on: 
+      - django-app-dev
+      - frontend-dev
+
 volumes:
   static_volume:
-  postgres_data:
