--- a/Pipfile
+++ b/Pipfile
@@ -4,22 +4,43 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django-cors-headers = "*"
-djangorestframework = "*"
-django-filter = "*"
-google-api-python-client = "*"
-python-dateutil = "*"
-Django = "*"
-Markdown = "*"
-gunicorn = "*"
+ansicon = "==1.89.0"
+arrow = "==0.17.0"
+asgiref = "==3.2.10"
+blessed = "==1.17.11"
+cachetools = "==4.1.1"
+certifi = "==2020.6.20"
+chardet = "==3.0.4"
+django-cors-headers = "==3.5.0"
+django-picklefield = "==3.0.1"
+django-q = "==1.3.4"
+djangorestframework = "==3.12.1"
+google-api-core = "==1.23.0"
+google-api-python-client = "==1.12.5"
+google-auth = "==1.23.0"
+google-auth-httplib2 = "==0.0.4"
+googleapis-common-protos = "==1.52.0"
+gunicorn = "==20.0.4"
+httplib2 = "==0.18.1"
+idna = "==2.10"
+jinxed = "==1.0.1"
+protobuf = "==3.13.0"
+pyasn1 = "==0.4.8"
+pyasn1-modules = "==0.2.8"
+python-dateutil = "==2.8.1"
+pytz = "==2020.1"
+requests = "==2.24.0"
+rsa = "==4.6"
+six = "==1.15.0"
+sqlparse = "==0.4.1"
+uritemplate = "==3.0.1"
+urllib3 = "==1.25.11"
+wcwidth = "==0.2.5"
+Django = "==3.1.2"
 django-environ = "*"
 pre-commit = "*"
-psycopg2 = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.9"
-
-[pipenv]
-allow_prereleases = true
